<resources>
    <string name="app_name">RD Asistente</string>

    <!-- Main -->
    <string name="acceptar">Aceptar</string>
    <string name="no_empty_data">No puede haber datos vacios</string>
    <string name="ok_alert">¡Bien hecho!</string>

    <!-- Menú -->
    <string name="menu_finanzas">Finanzas</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_mas">Mas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_free_time">Tiempo libre</string>
    <string name="menu_free_accounts">Cuentas</string>
    <string name="menu_free_food">Alimentación</string>

    <!-- Login -->
    <string name="label_inicio_sesion">Iniciar sesión</string>
    <string name="label_btn_inicia_sesion">Inicia sesión con tu correo</string>
    <string name="label_login_opciones">Ó también</string>
    <string name="hint_mail_login">Correo</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="hint_usr_login">Usuario</string>
    <string name="label_pregunta_registrar">¿No tienes cuenta?</string>
    <string name="label_registrar"><u>Regístrate</u></string>

    <!-- registro-->
    <string name="label_registro">Regístrate</string>
    <string name="label_btn_registro">Regístrate con tu correo</string>
    <string name="hint_name_registro">Nombre</string>
    <string name="hint_last_name_registro">Apellidos</string>
    <string name="text_correct_sign_main">Te has registrado correctamente, te llegará un correo, activa tu cuenta e inicia sesión</string>

    <!-- tags fragment -->
    <string name="tag_fragment_home">Fragment_Home</string>
    <string name="tag_fragment_finanzas">Fragment_Finanzas</string>
    <string name="tag_fragment_tareas">Fragment_Tareas</string>
    <string name="tag_fragment_agenda">Fragment_Agenda</string>
    <string name="tag_fragment_settings">Fragment_Settings</string>
    <string name="tag_fragment_mas">Fragment_Mas</string>

    <!-- settings -->
    <string name="hint_settings_name">Nombre</string>
    <string name="hint_settings_mail">Correo</string>
    <string name="hint_settings_last_name">Apellidos</string>
    <string name="text_settings_btn_change_data">Guardar datos</string>
    <string name="text_settings_link_pass"><u>¿Cambiar contraseña?</u></string>
    <string name="text_settings_link_pro"><u>¿Actualizar a pro?</u></string>
    <string name="text_settings_accept_push">¿Deseas recibir notificaciones?</string>
    <string name="text_settings_buy_me_coffe"><u>Te gusta nuestro trabajo ¿Invitanos un café?</u></string>
</resources>
