<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_font" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/label_registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="20dp"
                        android:src="@drawable/facebook"
                        android:layout_width="47dp"
                        android:layout_height="47dp" />
                    <ImageView
                        android:layout_margin="20dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/google" />
                </LinearLayout>
                <TextView
                    android:text="@string/label_login_opciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:textColor="@color/colorTextDefault"
                            android:inputType="textCapSentences"
                            android:hint="@string/hint_name_registro"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:textColor="@color/colorTextDefault"
                            android:inputType="textCapSentences"
                            android:hint="@string/hint_last_name_registro"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:textColor="@color/colorTextDefault"
                            android:inputType="textEmailAddress"
                            android:hint="@string/hint_mail_login"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:textColor="@color/colorTextDefault"
                            android:hint="@string/hint_password_login"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:layout_margin="20dp"
                        android:text="@string/label_btn_registro"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>